--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,16 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>hello tween</title>
-  <link rel="stylesheet" href="./css/common/common.css">
-  <link rel="stylesheet" href="./css/common/normalize.css">
+  <title>{{ page.title }}</title>
+  <link rel="stylesheet" href="./css/common.css">
+  <link rel="stylesheet" href="./css/normalize.css">
 
   <style>
 	</style>
 </head>
 
 <body>
-	<a href="./html/tween/index.html">hello tween!</a>
+
+{{ page.title }}
+
+
+{{ page.title }}
+{{ content }}
 	
 
 </body>
